--- a/03_Dynamic_Discrete_Choice/Chap6.Rmd
+++ b/03_Dynamic_Discrete_Choice/Chap6.Rmd
@@ -315,6 +315,52 @@ prob_buy_true_mat <- matrix(exp(V_CS_true[, 'V_buy']) / rowSums(exp(V_CS_true)),
                             nrow = num_price_states, ncol = num_mileage_states)
 prob_buy_true_mat
 ```
+```{r}
+# logitで計算される理論上の条件付き購入確率を図示
+# 3次元プロット
+cairo_pdf('output/CCP_true_3D.pdf')
+par(family = 'HiraKakuProN-W3')
+hist3D(x = mileage_states * 100, y = price_states * 100, z = t(prob_buy_true_mat),
+       zlim = c(0, 0.8),
+       bty = 'g', phi = 10,  theta = -60, axes = TRUE, label = TRUE,
+       xlab = '走行距離（万km）', ylab = '価格（万円）', zlab = '購入確率',
+       col = 'grey', border = 'black', shade = 0.4,
+       ticktype = 'detailed', space = 0.05, d = 2, cex.axis = 0.8)
+dev.off()
+```
+```{r}
+# logitで計算される理論上の条件付き購入確率を図示
+# 2次元プロット:価格ごとに図示
+for (i in 1:num_price_states) {
+  (data.frame(price_id = state_df$price_id, 
+              mileage_id = state_df$mileage_id,
+              mileage = state_df$mileage,
+              prob_buy = as.vector(prob_buy_true_mat)) %>%
+     filter(price_id == i) %>%
+     ggplot2::ggplot(aes(x = mileage * 100, y = prob_buy)) + 
+     ggplot2::geom_bar(stat = 'identity') +
+     ggplot2::theme_bw() +
+     ggplot2::theme(
+       axis.title.y = element_text(angle = 0, vjust = 0.5),
+       text = element_text(family = 'HiraKakuPro-W3'),
+       legend.position = 'none',
+       panel.grid.major.y = element_line(color = 'grey',
+                                         linewidth = 0.3, linetype = 'dotted'),
+       panel.grid.minor = element_blank(),
+       panel.grid.major.x = element_blank(),
+       panel.border = element_blank(),
+       axis.line = element_line(colour = 'black', linewidth = 0.2)
+       ) +
+     scale_x_continuous(breaks = seq(0, 10, 2)) + 
+     scale_y_continuous(limits = c(0, 0.8)) +
+     ggtitle(paste0('価格: ', i * 100, '万円')) +
+     ggplot2::labs(y = str_wrap('購 入 確 率', width = 1), x = '走行距離（万km）'))
+  ggsave(paste0('output/CCP_true_price', i * 100, '.pdf'), device = cairo_pdf)
+}
+```
+
+
+
 
 ### シミュレーション
 今回は1000人の消費者が50年にわたって車を購入するか、しないかの意思決定をしてきたことを想定したデータを作成する。ただし、私たちが観測できるのは最後の10年とする。
