--- a/03_Dynamic_Discrete_Choice/Chap6.Rmd
+++ b/03_Dynamic_Discrete_Choice/Chap6.Rmd
@@ -331,12 +331,11 @@ dev.off()
 ```{r}
 # logitで計算される理論上の条件付き購入確率を図示
 # 2次元プロット:価格ごとに図示
-for (i in 1:num_price_states) {
-  (data.frame(price_id = state_df$price_id, 
-              mileage_id = state_df$mileage_id,
+for (i in price_states) {
+  (data.frame(price = state_df$price,
               mileage = state_df$mileage,
               prob_buy = as.vector(prob_buy_true_mat)) %>%
-     filter(price_id == i) %>%
+     filter(price == i) %>%
      ggplot2::ggplot(aes(x = mileage * 100, y = prob_buy)) + 
      ggplot2::geom_bar(stat = 'identity') +
      ggplot2::theme_bw() +
@@ -354,7 +353,8 @@ for (i in 1:num_price_states) {
      scale_x_continuous(breaks = seq(0, 10, 2)) + 
      scale_y_continuous(limits = c(0, 0.8)) +
      ggtitle(paste0('価格: ', i * 100, '万円')) +
-     ggplot2::labs(y = str_wrap('購 入 確 率', width = 1), x = '走行距離（万km）'))
+     ggplot2::labs(y = str_wrap('購 入 確 率', width = 1), x = '走行距離（万km）')) %>%
+    print()
   ggsave(paste0('output/CCP_true_price', i * 100, '.pdf'), device = cairo_pdf)
 }
 ```
