--- a/01_Discrete_Choice/output/KT_2024_discretechoice_table.tex
+++ b/01_Discrete_Choice/output/KT_2024_discretechoice_table.tex
@@ -10,30 +10,30 @@
  & \multicolumn{1}{c}{mlogit} & \multicolumn{1}{c}{rcdc} & \multicolumn{1}{c}{mlogit} & \multicolumn{1}{c}{rcdc} \\ 
 \\[-1.8ex] & \multicolumn{1}{c}{(1)} & \multicolumn{1}{c}{(2)} & \multicolumn{1}{c}{(3)} & \multicolumn{1}{c}{(4)}\\ 
 \hline \\[-1.8ex] 
- price & 0.057^{***}$ $(0.004) & -1.843^{***}$ $(0.071) & 0.063^{***}$ $(0.011) & -1.622^{***}$ $(0.151) \\ 
-  Kinoko & 11.651^{***}$ $(0.729) & 33.558^{***}$ $(2.435) & 12.521^{***}$ $(2.059) & 39.658^{***}$ $(5.826) \\ 
-  Takenoko & 12.202^{***}$ $(0.745) & 34.874^{***}$ $(2.465) & 12.661^{***}$ $(2.088) & 40.199^{***}$ $(5.857) \\ 
-  sd.price &  & 0.154^{***}$ $(0.016) &  & 0.121^{***}$ $(0.019) \\ 
-  sd.Kinoko &  & -2.416^{***}$ $(0.518) &  & 2.657^{***}$ $(0.528) \\ 
-  sd.Takenoko &  & 3.799^{***}$ $(0.454) &  & 3.760^{***}$ $(0.476) \\ 
-  price:genderfemale &  &  & 0.013$ $(0.008) & 0.038^{**}$ $(0.019) \\ 
-  Takenoko:genderfemale &  &  & 3.363^{**}$ $(1.662) & 10.173^{***}$ $(3.823) \\ 
-  Kinoko:genderfemale &  &  & 3.529^{**}$ $(1.628) & 10.376^{***}$ $(3.796) \\ 
+ price & 0.057^{***}$ $(0.004) & 0.164^{***}$ $(0.013) & 0.063^{***}$ $(0.011) & 0.199^{***}$ $(0.030) \\ 
+  Kinoko & 11.651^{***}$ $(0.729) & 35.194^{***}$ $(2.852) & 12.521^{***}$ $(2.059) & 40.227^{***}$ $(5.925) \\ 
+  Takenoko & 12.202^{***}$ $(0.745) & 36.499^{***}$ $(2.895) & 12.661^{***}$ $(2.088) & 40.709^{***}$ $(5.951) \\ 
+  sd.price &  & -0.031^{***}$ $(0.004) &  & -0.028^{***}$ $(0.004) \\ 
+  sd.Kinoko &  & 1.238$ $(0.905) &  & -2.471^{***}$ $(0.553) \\ 
+  sd.Takenoko &  & 4.294^{***}$ $(0.488) &  & 4.047^{***}$ $(0.513) \\ 
+  price:genderfemale &  &  & 0.013$ $(0.008) & 0.035^{*}$ $(0.019) \\ 
+  Takenoko:genderfemale &  &  & 3.363^{**}$ $(1.662) & 9.739^{**}$ $(3.868) \\ 
+  Kinoko:genderfemale &  &  & 3.529^{**}$ $(1.628) & 9.925^{***}$ $(3.840) \\ 
   price:familyhouse &  &  & -0.002$ $(0.010) & -0.023$ $(0.023) \\ 
-  Takenoko:familyhouse &  &  & -0.046$ $(1.943) & -3.466$ $(4.454) \\ 
-  Kinoko:familyhouse &  &  & -0.429$ $(1.918) & -4.238$ $(4.479) \\ 
-  price:adult &  &  & -0.018^{**}$ $(0.008) & -0.054^{***}$ $(0.017) \\ 
-  Takenoko:adult &  &  & -3.324^{**}$ $(1.544) & -9.482^{***}$ $(3.418) \\ 
-  Kinoko:adult &  &  & -3.664^{**}$ $(1.513) & -10.141^{***}$ $(3.410) \\ 
-  price:regionKansai &  &  & 0.016$ $(0.016) & 0.003$ $(0.031) \\ 
-  price:regionOversea &  &  & 0.013$ $(0.018) & -0.017$ $(0.032) \\ 
-  Takenoko:regionKansai &  &  & 3.817$ $(3.285) & 2.114$ $(6.092) \\ 
-  Takenoko:regionOversea &  &  & 2.796$ $(3.579) & -2.035$ $(6.336) \\ 
-  Kinoko:regionKansai &  &  & 3.365$ $(3.190) & 1.390$ $(6.041) \\ 
-  Kinoko:regionOversea &  &  & 3.390$ $(3.574) & -0.241$ $(6.342) \\ 
+  Takenoko:familyhouse &  &  & -0.046$ $(1.943) & -3.344$ $(4.530) \\ 
+  Kinoko:familyhouse &  &  & -0.429$ $(1.918) & -4.129$ $(4.550) \\ 
+  price:adult &  &  & -0.018^{**}$ $(0.008) & -0.048^{***}$ $(0.017) \\ 
+  Takenoko:adult &  &  & -3.324^{**}$ $(1.544) & -8.876^{***}$ $(3.430) \\ 
+  Kinoko:adult &  &  & -3.664^{**}$ $(1.513) & -9.569^{***}$ $(3.419) \\ 
+  price:regionKansai &  &  & 0.016$ $(0.016) & -0.001$ $(0.031) \\ 
+  price:regionOversea &  &  & 0.013$ $(0.018) & -0.018$ $(0.033) \\ 
+  Takenoko:regionKansai &  &  & 3.817$ $(3.285) & 1.705$ $(6.159) \\ 
+  Takenoko:regionOversea &  &  & 2.796$ $(3.579) & -2.618$ $(6.441) \\ 
+  Kinoko:regionKansai &  &  & 3.365$ $(3.190) & 0.792$ $(6.101) \\ 
+  Kinoko:regionOversea &  &  & 3.390$ $(3.574) & -1.088$ $(6.447) \\ 
  \hline \\[-1.8ex] 
 Observations & \multicolumn{1}{c}{1,180} & \multicolumn{1}{c}{1,180} & \multicolumn{1}{c}{1,180} & \multicolumn{1}{c}{1,180} \\ 
-Log Likelihood & \multicolumn{1}{c}{-1,067.662} & \multicolumn{1}{c}{-727.574} & \multicolumn{1}{c}{-1,038.798} & \multicolumn{1}{c}{-715.530} \\ 
+Log Likelihood & \multicolumn{1}{c}{-1,067.662} & \multicolumn{1}{c}{-727.742} & \multicolumn{1}{c}{-1,038.798} & \multicolumn{1}{c}{-713.796} \\ 
 \hline 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{4}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
