--- a/03_Dynamic_Discrete_Choice/Chap6.Rmd
+++ b/03_Dynamic_Discrete_Choice/Chap6.Rmd
@@ -328,35 +328,39 @@ hist3D(x = mileage_states * 100, y = price_states * 100, z = t(prob_buy_true_mat
        ticktype = 'detailed', space = 0.05, d = 2, cex.axis = 0.8)
 dev.off()
 ```
+
 ```{r}
 # logitで計算される理論上の条件付き購入確率を図示
 # 2次元プロット:価格ごとに図示
-for (i in price_states) {
-  (data.frame(price = state_df$price,
-              mileage = state_df$mileage,
-              prob_buy = as.vector(prob_buy_true_mat)) %>%
-     filter(price == i) %>%
-     ggplot2::ggplot(aes(x = mileage * 100, y = prob_buy)) + 
-     ggplot2::geom_bar(stat = 'identity') +
-     ggplot2::theme_bw() +
-     ggplot2::theme(
-       axis.title.y = element_text(angle = 0, vjust = 0.5),
-       text = element_text(family = 'HiraKakuPro-W3'),
-       legend.position = 'none',
-       panel.grid.major.y = element_line(color = 'grey',
-                                         linewidth = 0.3, linetype = 'dotted'),
-       panel.grid.minor = element_blank(),
-       panel.grid.major.x = element_blank(),
-       panel.border = element_blank(),
-       axis.line = element_line(colour = 'black', linewidth = 0.2)
-       ) +
-     scale_x_continuous(breaks = seq(0, 10, 2)) + 
-     scale_y_continuous(limits = c(0, 0.8)) +
-     ggtitle(paste0('価格: ', i * 100, '万円')) +
-     ggplot2::labs(y = str_wrap('購 入 確 率', width = 1), x = '走行距離（万km）')) %>%
-    print()
-  ggsave(paste0('output/CCP_true_price', i * 100, '.pdf'), device = cairo_pdf)
-}
+
+data.frame(price = state_df$price,
+           mileage = state_df$mileage,
+           prob_buy = as.vector(prob_buy_true_mat)) %>%
+  ggplot2::ggplot(aes(x = mileage * 100, y = prob_buy, color = factor(price))) +
+  ggplot2::geom_line() +
+  ggplot2::geom_point() +
+  ggplot2::theme_minimal()+
+  ggplot2::scale_y_continuous(expand = expansion(mult = c(0, 0.05))) +
+  ggplot2::theme(
+    axis.title.y = element_text(angle = 0, vjust = 0.5),
+    text = element_text(family = 'HiraKakuPro-W3'),
+    panel.grid.major.y = element_line(color = 'grey',
+                                      linewidth = 0.3, linetype = 'dotted'),
+    panel.grid.minor.y = element_line(color = 'grey',
+                                      linewidth = 0.3, linetype = 'dotted'),
+    panel.grid.minor = element_blank(),
+    panel.grid.major.x = element_blank(),
+    panel.border = element_blank(),
+    axis.line = element_line(colour = 'black', linewidth = 0.2)
+  ) +
+  scale_x_continuous(breaks = seq(0, 10, by = 2)) +
+  ggplot2::labs(y = str_wrap('購 買 確 率', width = 1),
+                x = '走行距離（万km）') +
+  ggplot2::scale_color_grey(name = '価格', 
+                            labels = c('200万円', '210万円',
+                                       '220万円', '230万円',
+                                       '240万円', '250万円')) 
+ggsave('output/CCP_true_2D.pdf', device = cairo_pdf)
 ```
 
 
