--- a/01_Discrete_Choice/KT_2024_discretechoice.Rmd
+++ b/01_Discrete_Choice/KT_2024_discretechoice.Rmd
@@ -8,7 +8,7 @@ output:
     df_print: paged
     code_folding: hide
     number_section: true
-date: "2024-05-26"
+date: "2024-06-01"
 ---
 　このファイルは、2024年度のきのこの山・たけのこの里アンケートについての分析用のコード及びその結果をまとめたものである。
 ```{r setup, include=FALSE}
@@ -240,3 +240,129 @@ stargazer::stargazer(ml,rcdc,ml_consumer_atr,rcdc_consumer_atr,column.labels=c("
 
 　また、参考までに以下に2023年のデータで同様の分析を実行した際の結果を示しておく。概ね結果は同じであるが、女性ダミーの交差項の係数に関しては結果が異なるので確認されたい。
 ![](2023_KT_table.png){width=75%}
+  
+次に、きのこの山、たけのこの里、価格係数の分布を作成していく。
+
+
+```{r}
+
+# 消費者属性を考慮して選好パラメタおよびWTPの分布の計算
+
+# 全部ダミー変数にする
+data_for_param <- KT_2024 %>%
+  mutate(gender =　case_when(gender == "1 : 男性" ~ 0,
+                            gender == "2 : 女性" ~ 1 ),
+         adult = if_else(age>=20, 1, 0),
+         kansai =  case_when(region == "1 : 北海道地方" ~ 0,
+                             region == "2 : 東北地方" ~ 0,
+                             region == "3 : 関東地方" ~ 0 ,
+                             region == "4 : 中部地方" ~ 0,
+                             region == "5 : 近畿地方" ~ 1,
+                             region == "6 : 中国地方" ~ 1,
+                             region == "7 : 四国地方" ~ 1,
+                             region == "8 : 九州地方(沖縄含む)" ~ 1,
+                             region == "9 : 海外" ~ 0),
+         oversea =  case_when(region == "1 : 北海道地方" ~ 0,
+                             region == "2 : 東北地方" ~ 0,
+                             region == "3 : 関東地方" ~ 0 ,
+                             region == "4 : 中部地方" ~ 0,
+                             region == "5 : 近畿地方" ~ 0,
+                             region == "6 : 中国地方" ~ 0,
+                             region == "7 : 四国地方" ~ 0,
+                             region == "8 : 九州地方(沖縄含む)" ~ 0,
+                             region == "9 : 海外" ~ 1))
+
+indiv_par <- rcdc_consumer_atr$indpar
+# 各個人の属性のパラメータを計算して和を取る→その値と各個人の選好パラメタ(消費者属性を考慮していない)との和を取る
+param_Takenoko_atr <- data_for_param$gender*rcdc_consumer_atr$coefficients[5]+data_for_param$familyhouse*rcdc_consumer_atr$coefficients[8]+data_for_param$adult*rcdc_consumer_atr$coefficients[11]+data_for_param$kansai*rcdc_consumer_atr$coefficients[15]+data_for_param$oversea*rcdc_consumer_atr$coefficients[16]
+alpha_Takenoko_by_indiv <- indiv_par$Takenoko + param_Takenoko_atr
+
+param_Kinoko_atr <- data_for_param$gender*rcdc_consumer_atr$coefficients[6]+data_for_param$familyhouse*rcdc_consumer_atr$coefficients[9]+data_for_param$adult*rcdc_consumer_atr$coefficients[12]+data_for_param$kansai*rcdc_consumer_atr$coefficients[17]+data_for_param$oversea*rcdc_consumer_atr$coefficients[18]
+alpha_Kinoko_by_indiv <- indiv_par$Kinoko + param_Kinoko_atr
+
+
+param_price_atr <- data_for_param$gender*rcdc_consumer_atr$coefficients[4]+data_for_param$familyhouse*rcdc_consumer_atr$coefficients[7]+data_for_param$adult*rcdc_consumer_atr$coefficients[10]+data_for_param$kansai*rcdc_consumer_atr$coefficients[13]+data_for_param$oversea*rcdc_consumer_atr$coefficients[14]
+beta_price_by_indiv <- indiv_par$price + param_price_atr
+```
+きのこの山とたけのこの里の係数の差の分布は以下のようになる。きのこよりもたけのこがより好まれていることが見て取れる。
+```{r}
+
+# きのことたけのこの係数の差の分布
+KT_dist <- ggplot(data = data.frame(x = c(-25, 25)), aes(x)) +
+  stat_function(fun = dnorm, n = 101, 
+                args = list(mean = mean(alpha_Kinoko_by_indiv) -mean(alpha_Takenoko_by_indiv) , 
+                            sd = sqrt(var(alpha_Kinoko_by_indiv) + var(alpha_Takenoko_by_indiv)) ) ) +
+  ylab("density") + xlab("Kinoko - Takenoko") +
+  ggtitle("Preference Kinoko over Takenoko")
+plot(KT_dist)
+
+ggsave(filename = "output/fig_dist_preference_KT.pdf", plot = KT_dist, width = 6, height = 6)
+```
+続いて、以下が価格係数の分布である。
+```{r}
+# 価格係数の分布
+p_coef_dist <- ggplot(data = data.frame(x = c(0.05, 0.30) ), aes(x)) +
+  stat_function(fun = dnorm, n = 101, 
+                args = list(mean = mean(beta_price_by_indiv), sd = sd(beta_price_by_indiv)), colour = "red" ) + 
+  ylab("density") + xlab("beta") +
+  scale_y_continuous(breaks = NULL) + ggtitle("Beta (price coefficient)")
+plot(p_coef_dist)
+ggsave(filename = "output/fig_dist_price_coef.pdf", plot = p_coef_dist, width = 6, height = 6)
+```
+
+次に、WTPの分布を作成する。
+```{r}
+# WTPを求める
+# ドロー元の分布のパラメタ
+dist_Kinoko <- rpar(rcdc_consumer_atr,'Kinoko')
+dist_Takenoko <- rpar(rcdc_consumer_atr,'Takenoko')
+dist_price <- rpar(rcdc_consumer_atr,'price')
+alpha_Kinoko_for_WTP <- NULL
+alpha_Takenoko_for_WTP <- NULL
+beta_price_for_WTP <- NULL
+# 各消費者(計236人)ごとにランダムな選好を100回ドローする→上で計算した属性のパラメタの和との和を取る
+for(i in 1:236){
+set.seed(100+i)
+
+alpha_Kinoko_draw = rnorm(100, mean = dist_Kinoko$mean, sd = abs(dist_Kinoko$sigma))+param_Kinoko_atr[i]
+alpha_Kinoko_for_WTP = c(alpha_Kinoko_for_WTP, alpha_Kinoko_draw)
+
+alpha_Takenoko_draw = rnorm(100, mean = dist_Takenoko$mean, sd = abs(dist_Takenoko$sigma))+param_Takenoko_atr[i]
+alpha_Takenoko_for_WTP = c(alpha_Takenoko_for_WTP, alpha_Takenoko_draw)
+
+beta_price_draw = rnorm(100, mean = dist_price$mean, sd = abs(dist_price$sigma))+param_price_atr[i]
+beta_price_for_WTP = c(beta_price_for_WTP, beta_price_draw)
+}
+
+# データフレーム化
+dt_brand = 
+  tibble( alpha_Kinoko_for_WTP , 
+          alpha_Takenoko_for_WTP ,  
+          beta_price_for_WTP)
+
+# 支払い意思額の計算
+dt_brand %>% 
+  mutate( brand_Kinoko = alpha_Kinoko_for_WTP / beta_price_for_WTP, 
+          brand_Takenoko = alpha_Takenoko_for_WTP / beta_price_for_WTP,
+          love_Kinoko = ifelse(alpha_Kinoko_for_WTP > alpha_Takenoko_for_WTP, 1, 0 )) -> dt_brand 
+
+
+dt_brand %>% 
+  select( brand_Kinoko, brand_Takenoko) %>% 
+  rename( WTP_Kinoko = brand_Kinoko, 
+          WTP_Takenoko = brand_Takenoko) %>% 
+  pivot_longer( cols = everything(), names_to = "Name", values_to = "WTP") -> dt
+```
+
+以下がWTPの分布となる。安い場合はきのこのほうが買われやすいことが示唆される。
+```{r}
+# WTPの分布
+dt %>% 
+  ggplot( aes(x = WTP, colour  = Name)) + theme_bw() + 
+  geom_density() +
+  xlim(c(0,500))-> fig_brand
+plot(fig_brand)
+ggsave(filename = "output/brand_value.pdf", plot = fig_brand, width = 12, height = 6)
+
+```
+
