--- a/01_Discrete_Choice/KT_2024_discretechoice.Rmd
+++ b/01_Discrete_Choice/KT_2024_discretechoice.Rmd
@@ -272,17 +272,19 @@ data_for_param <- KT_2024 %>%
                              region == "8 : 九州地方(沖縄含む)" ~ 0,
                              region == "9 : 海外" ~ 1))
 
-indiv_par <- rcdc_consumer_atr$indpar
-# 各個人の属性のパラメータを計算して和を取る→その値と各個人の選好パラメタ(消費者属性を考慮していない)との和を取る
+dist_Kinoko <- rpar(rcdc_consumer_atr,'Kinoko')
+dist_Takenoko <- rpar(rcdc_consumer_atr,'Takenoko')
+dist_price <- rpar(rcdc_consumer_atr,'price')
+# 各個人の属性のパラメタを計算して平均する→その値と選好パラメタ(消費者属性を考慮していない)の平均との和を取る
 param_Takenoko_atr <- data_for_param$gender*rcdc_consumer_atr$coefficients[5]+data_for_param$familyhouse*rcdc_consumer_atr$coefficients[8]+data_for_param$adult*rcdc_consumer_atr$coefficients[11]+data_for_param$kansai*rcdc_consumer_atr$coefficients[15]+data_for_param$oversea*rcdc_consumer_atr$coefficients[16]
-alpha_Takenoko_by_indiv <- indiv_par$Takenoko + param_Takenoko_atr
+alpha_Takenoko_mean <- dist_Takenoko$mean + mean(param_Takenoko_atr)
 
 param_Kinoko_atr <- data_for_param$gender*rcdc_consumer_atr$coefficients[6]+data_for_param$familyhouse*rcdc_consumer_atr$coefficients[9]+data_for_param$adult*rcdc_consumer_atr$coefficients[12]+data_for_param$kansai*rcdc_consumer_atr$coefficients[17]+data_for_param$oversea*rcdc_consumer_atr$coefficients[18]
-alpha_Kinoko_by_indiv <- indiv_par$Kinoko + param_Kinoko_atr
+alpha_Kinoko_mean <- dist_Kinoko$mean + mean(param_Kinoko_atr)
 
 
 param_price_atr <- data_for_param$gender*rcdc_consumer_atr$coefficients[4]+data_for_param$familyhouse*rcdc_consumer_atr$coefficients[7]+data_for_param$adult*rcdc_consumer_atr$coefficients[10]+data_for_param$kansai*rcdc_consumer_atr$coefficients[13]+data_for_param$oversea*rcdc_consumer_atr$coefficients[14]
-beta_price_by_indiv <- indiv_par$price + param_price_atr
+beta_price_mean <- dist_price$mean + mean(param_price_atr)
 ```
 きのこの山とたけのこの里の係数の差の分布は以下のようになる。きのこよりもたけのこがより好まれていることが見て取れる。
 ```{r}
@@ -290,8 +292,8 @@ beta_price_by_indiv <- indiv_par$price + param_price_atr
 # きのことたけのこの係数の差の分布
 KT_dist <- ggplot(data = data.frame(x = c(-25, 25)), aes(x)) +
   stat_function(fun = dnorm, n = 101, 
-                args = list(mean = mean(alpha_Kinoko_by_indiv) -mean(alpha_Takenoko_by_indiv) , 
-                            sd = sqrt(var(alpha_Kinoko_by_indiv) + var(alpha_Takenoko_by_indiv)) ) ) +
+                args = list(mean = alpha_Kinoko_mean -alpha_Takenoko_mean , 
+                            sd = sqrt(dist_Kinoko$sigma^2 + dist_Takenoko$sigma^2) ) ) +
   ylab("density") + xlab("Kinoko - Takenoko") +
   ggtitle("Preference Kinoko over Takenoko")
 plot(KT_dist)
@@ -303,7 +305,7 @@ ggsave(filename = "output/fig_dist_preference_KT.pdf", plot = KT_dist, width = 6
 # 価格係数の分布
 p_coef_dist <- ggplot(data = data.frame(x = c(0.05, 0.30) ), aes(x)) +
   stat_function(fun = dnorm, n = 101, 
-                args = list(mean = mean(beta_price_by_indiv), sd = sd(beta_price_by_indiv)), colour = "red" ) + 
+                args = list(mean = beta_price_mean, sd = abs(dist_price$sigma)), colour = "red" ) + 
   ylab("density") + xlab("beta") +
   scale_y_continuous(breaks = NULL) + ggtitle("Beta (price coefficient)")
 plot(p_coef_dist)
@@ -313,10 +315,8 @@ ggsave(filename = "output/fig_dist_price_coef.pdf", plot = p_coef_dist, width = 
 次に、WTPの分布を作成する。
 ```{r}
 # WTPを求める
-# ドロー元の分布のパラメタ
-dist_Kinoko <- rpar(rcdc_consumer_atr,'Kinoko')
-dist_Takenoko <- rpar(rcdc_consumer_atr,'Takenoko')
-dist_price <- rpar(rcdc_consumer_atr,'price')
+
+# ループ格納用
 alpha_Kinoko_for_WTP <- NULL
 alpha_Takenoko_for_WTP <- NULL
 beta_price_for_WTP <- NULL
